# suda

./: .gitignore  readme.md
PIRANA/: CMakeLists.txt  performance.py  run.sh  setup.sh
PIRANA/src/: client.cc  client.h  main.cc  mem_usage.bak  pir_parms.cc  pir_parms.h  server.cc
iPrivJoin/: .gitignore  CMakeLists.txt  collect.py  config_PA.txt  config_PB.txt  download_data.py  e.sh  main.cpp  pid.txt  readme.md  run.sh  run_config.sh  run_cpsi.sh  run_iPrivateJoin.sh  run_mpclr.sh  run_test_fromfiles.sh  run_test_payload.sh  run_test_size.sh  setlan.sh  setup_paper_exp.sh  setwan.bak  setwan.sh  skin_cancer.sh  unbalanced1.sh  unbalanced2.sh
iPrivJoin/mpc_lr/: heart_disease_data.py  launcher.py  mpc_autograd_cnn.py  mpc_autograd_lr_from_csv.py  mpc_lr.py
iPrivJoin/src/: client.cpp  client.h  constants.h  context.h  server.cpp  server.h  threadPool.h  utlis.cpp  utlis.h
iPrivJoin/src/ggm/: ggm.cpp  ggm.h
iPrivJoin/src/joinData/: file_io.h  joinData.cpp  joinData.h
iPrivJoin/src/lpn/: lpn.cpp  lpn.h
iPrivJoin/src/opprf/: opprf.cpp  opprf.h
iPrivJoin/src/oprf/: oprf.cpp  oprf.h
iPrivJoin/src/shuffle/: shuffle.cpp  shuffle.h
iPrivJoin/test/: Bank_PA.txt  Bank_PB.txt  configIO_PA.txt  config_1048576_4096_1000_LAN_PA.txt  config_1048576_4096_1000_LAN_PB.txt  config_1048576_4096_1000_PA.txt  config_1048576_4096_1000_PB.txt  config_PA.txt  config_PA_1000.txt  config_PA_wan.txt  config_PB.txt  config_PB_1000.txt  config_PB_wan.txt  credit1_PA.txt  credit1_PB.txt  skin_cancer_PA.txt  skin_cancer_PB.txt
iPrivJoin/test/config/: Bank.toml  Ionosphere.toml  Phishing.toml  application.toml  breast.toml  config.toml  configIO_CFI.toml  configIO_CFI_test.toml  configIO_SVHN.toml  configIO_SVHN_test.toml  config_1048576_4096_1000_LAN.toml  config_payload.toml  credit1.toml  credit2.toml  skin_cancer.toml
mpc_projects/: CMakeLists.txt  performence.py  readme.md  requirements.txt  run_batchpir_test.sh  run_mpclr.sh  run_psi_to_share_test_interratio.sh  run_psi_to_share_test_paillier.sh  run_psi_to_share_test_payload.sh  run_psi_to_share_test_size.sh  run_psi_to_share_using_files_test.sh  setup.sh
mpc_projects/mpc_lr/: launcher.py  mpc_autograd_lr.py  mpc_autograd_lr_from_csv.py  plain_lr.py
mpc_projects/python/: collect.py  data_to_json.py  download_SVHN.py  performence.py  preprocess_dataset.sh
mpc_projects/src/: batch_pir_basic_test.cpp  batch_pir_protocol_test.cpp  batch_pir_to_share_test.cpp  ec_psi_test.cpp  json_test.cpp  mem_usage_test.cpp  netio_test.cpp  ntl_test.cpp  pailier_test.cpp  poly_test.cpp  psi_to_share_paillier_test.cpp  psi_to_share_test.cpp  psi_to_share_using_files_test.cpp  read_bin_test.cpp  read_mat_test.cpp  seal_test.cpp
mpc_projects/src/include/: batch_pir_basic.h  batch_pir_protocol.h  batch_pir_to_share.h  ec_psi.h  fake_netio.h  file_io.h  get_newid.h  ipcl_serializable.h  mpc_tee_psi.bakh  netio.h  poly_tool.h  psi_to_share.h  psi_to_share_paillier.h  seal_helper.h  utils.h
volepsi/: .gitignore  CMakeLists.txt  README.md  build.py  run_cpsi.sh  run_mpclr.sh  setup.sh
volepsi/mpc_lr/: launcher.py  mpc_autograd_lr_from_csv.py  mpc_autograd_lr_from_file.py  requirements.txt
volepsi/paper_exp_volepsi/: CMakeLists.txt  cpsi_test.cpp  file_io.h  mem_usage.h  netio.h
volepsi/volePSI/: RsCpsi.cpp  RsOpprf.cpp  RsOpprf.h  SimpleIndex.cpp
